crates/widgets/src/overlay/modal/snapshots/widgets__overlay__modal__frame__tests__a_modal_frames_itself_inside_the_screen@dialog_min_width.snap
---
source: crates/widgets/src/overlay/modal/frame.rs
expression: frame
---
ModalAreas {
    outer: Rect {
        x: 18,
        y: 11,
        width: 44,
        height: 3,
    },
    body: Rect {
        x: 20,
        y: 12,
        width: 40,
        height: 1,
    },
    hint_row: Rect {
        x: 20,
        y: 13,
        width: 40,
        height: 0,
    },
    painted: Rect {
        x: 18,
        y: 11,
        width: 44,
        height: 3,
    },
}
