crates/widgets/src/overlay/modal/snapshots/widgets__overlay__modal__frame__tests__a_modal_frames_itself_inside_the_screen@list.snap
---
source: crates/widgets/src/overlay/modal/frame.rs
expression: frame
---
ModalAreas {
    outer: Rect {
        x: 28,
        y: 9,
        width: 24,
        height: 7,
    },
    body: Rect {
        x: 30,
        y: 10,
        width: 20,
        height: 5,
    },
    hint_row: Rect {
        x: 30,
        y: 15,
        width: 20,
        height: 0,
    },
}
