crates/widgets/src/overlay/modal/snapshots/widgets__overlay__modal__frame__tests__a_modal_frames_itself_inside_the_screen@list_clamped.snap
---
source: crates/widgets/src/overlay/modal/frame.rs
expression: frame
---
ModalAreas {
    outer: Rect {
        x: 1,
        y: 1,
        width: 78,
        height: 22,
    },
    body: Rect {
        x: 3,
        y: 2,
        width: 74,
        height: 19,
    },
    hint_row: Rect {
        x: 3,
        y: 21,
        width: 74,
        height: 1,
    },
    painted: Rect {
        x: 1,
        y: 1,
        width: 78,
        height: 22,
    },
}
