crates/widgets/src/overlay/modal/snapshots/widgets__overlay__modal__frame__tests__a_modal_frames_itself_inside_the_screen@list_tiny.snap
---
source: crates/widgets/src/overlay/modal/frame.rs
expression: frame
---
ModalAreas {
    outer: Rect {
        x: 1,
        y: 1,
        width: 28,
        height: 8,
    },
    body: Rect {
        x: 3,
        y: 2,
        width: 24,
        height: 6,
    },
    hint_row: Rect {
        x: 3,
        y: 8,
        width: 24,
        height: 0,
    },
}
